test_regress/t/t_assoc_nokey_bad.out
%Error: t/t_assoc_nokey_bad.v:12:36: Missing pattern key (need an expression then a ':')
                                   : ... note: In instance 't'
   12 |     automatic int dict[string] = '{1, 2};
      |                                    ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_assoc_nokey_bad.v:12:39: Missing pattern key (need an expression then a ':')
                                   : ... note: In instance 't'
   12 |     automatic int dict[string] = '{1, 2};
      |                                       ^
%Error: Exiting due to
